src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwP0.25-dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\ndefault window height: F500\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 283 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 500, bounds: 1231 × 680, states: [Activated]
