src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwP0.25-dhP0.5-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\ndefault window height: P0.5\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 292 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 292 × 328, bounds: 1240 × 680, states: [Activated]
